packages/fuels-macros/tests/ui/abigen/invalid_abi_path.stderr
error: failed to read `abi` file with path $WORKSPACE/target/tests/trybuild/fuels-macros/some_abi.json: No such file or directory (os error 2)
 --> tests/ui/abigen/invalid_abi_path.rs:3:43
  |
3 | abigen!(Contract(name = "SomeName", abi = "some_abi.json"));
  |                                           ^^^^^^^^^^^^^^^
