packages/fuels-macros/tests/ui/abigen/invalid_abi_path.rs
use fuels_macros::abigen;

abigen!(Contract(name = "SomeName", abi = "some_abi.json"));

fn main() {}
